<resources>
    <string name="app_name" translatable="false">MemoQ</string>
    <string name="facebook_app_id" translatable="false">767591293445543</string>
    <string name="google_web_client_id" translatable="false">71953638012-66e9agtgfcijcrmbi0l8d8u67kol6a2q.apps.googleusercontent.com</string>

    <!-- Font -->
    <string name="roboto_medium" translatable="false">sans-serif-medium</string>
    <string name="roboto_regular" translatable="false">sans-serif</string>
    <string name="roboto_light" translatable="false">sans-serif-light</string>
    <string name="roboto_thin" translatable="false">sans-serif-thin</string>

    <!-- Login -->
    <string name="email">電子信箱地址</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="login_facebook">以Facebook帳號登入</string>
    <string name="login_google">以Google帳號登入</string>
    <string name="login_error">登入失敗</string>
    <string name="create_account">建立帳戶</string>
    <string name="forget_password">忘記密碼</string>
    <string name="forget_password_msg">已寄送密碼重設通知信至您的電子信箱</string>
    <string name="forget_password_error">寄送密碼重設通知信失敗</string>
    <string name="email_password_empty">請輸入電子信箱和密碼</string>
    <string name="email_empty">請輸入電子信箱</string>
    <string name="email_malformed">電子信箱驗證失敗</string>
    <string name="email_collision">此電子信箱已註冊</string>
    <string name="password_week">密碼強度太弱(至少六個字元)</string>
</resources>
