<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:wheel="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/login"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:src="@mipmap/ic_launcher"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_email_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_email_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_login_background"
            android:fontFamily="@string/roboto_regular"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/login"
            android:textColor="@drawable/btn_login_text"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/btn_fb_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_fb_background"
            android:drawableLeft="@drawable/btn_fb_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@string/roboto_regular"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/login_facebook"
            android:textColor="@drawable/btn_fb_text"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_google_background"
            android:drawableLeft="@drawable/btn_fb_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@string/roboto_regular"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/login_google"
            android:textColor="@drawable/btn_google_text"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/txt_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/roboto_light"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/txt_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/roboto_light"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="14dp"/>

    </LinearLayout>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        wheel:matProg_barColor="@color/white"
        wheel:matProg_progressIndeterminate="true"/>

</RelativeLayout>
